--- a/CyclingMates/Views/Shared/_Layout.cshtml
+++ b/CyclingMates/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Activity" asp-action="">Activity</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Activity" asp-action="">My Activities</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
