--- a/CyclingMates/Views/Home/Index.cshtml
+++ b/CyclingMates/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to CyclingMates</h1>
 </div>
 
 <div class="container">
